# JobFinder

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2fa30b6aedbe_initial_schema.py  bec45a417afc_add_indexes_and_unique_constraints.py  e0aca6657f8c_initial_schema.py
backend/app/: config.py  database.py  main.py  matching.py
backend/app/api/: criteria.py  jobs.py  notifications.py  scrapes.py
backend/app/models/: __init__.py  criteria.py  job.py  notification.py
backend/app/notifications/: __init__.py  email.py  push.py
backend/app/scrapers/: __init__.py  base.py  dice.py  indeed.py  linkedin.py  remoteok.py  weworkremotely.py
backend/app/services/: __init__.py  scrape_service.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_email_notifications.py  test_matching.py  test_models.py  test_models_import.py  test_scrape_service.py
backend/tests/api/: test_jobs_api.py
backend/tests/scrapers/: __init__.py  test_remoteok.py  test_weworkremotely.py
docs/plans/: 2026-02-16-jobfinder-design.md  2026-02-16-jobfinder-implementation.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: JobTable.tsx  Nav.tsx  RefreshButton.tsx  ServiceWorkerRegistration.tsx
frontend/app/criteria/: CriteriaForm.tsx  page.tsx
frontend/app/settings/: page.tsx
frontend/components/ui/: sonner.tsx
frontend/lib/: api.ts
frontend/public/: sw.js
