[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jobfinder"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg2-binary>=2.9",
    "celery[redis]>=5.4",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "playwright>=1.49",
    "resend>=2.0",
    "pywebpush>=2.0",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.6",
    "rapidfuzz>=3.10",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
    "httpx>=0.27",
    "factory-boy>=3.3",
]
